@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<configuration>
+  <configSections>
+    <sectionGroup name="White">
+      <section name="Core" type="System.Configuration.NameValueSectionHandler"/>
+    </sectionGroup>
+  </configSections>
+  <White>
+    <Core>
+      <add key="TooltipWaitTime" value="3000"/>
+      <add key="BusyTimeout" value="500000"/>
+    </Core>
+  </White>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
