@@ -72,6 +72,9 @@
     <Compile Include="Infrastructure\WpfTestConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
