@@ -1,5 +1,6 @@
 Version 0.10.1
  - Fix: Tooltips can now be found as expected
+ - Retry.ForDefault method now reads it's default timeout from White's configuration
 
 Version 0.10.0
  - BREAKING: Removed Log4net, now using Castle's logging abstractions. See https://github.com/TestStack/White/wiki/log4net-Removal
